<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenMapKit</string>

    <string name="action_osmcredentials">OSM User Name</string>
    <string name="action_osmdownloader">OSM XML Downloader</string>
    <!-- osm menu -->
    <string name="action_osmsettings">OSM XML Layers</string>
    <string name="action_info">Info</string>
    <string name="osmChooserDialogTitle">Choose OSM XML Files</string>
    <string name="osmAppPath">openmapkit/osm</string>

    <!-- mbtiles menu -->
    <string name="action_deployments">Deployments</string>
    <string name="action_basemaps">Basemap</string>
    <string name="mbtilesChooserDialogTitle">Choose Basemap</string>
    <string name="downloadOSMTitle">Download OSM Data</string>

    <string name="zoomToData">Zoom to Data</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add">+</string>


    <string name="tags">Tags</string>
    <string name="action_settings">Settings</string>

    <!-- default tile layer -->
    <string name="defaultTileLayerPID">hot</string>
    <string name="defaultTileLayerURL">"http://a.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png"</string>
    <string name="defaultTileLayerName">"Humanitarian OpenStreetMap"</string>
    <string name="defaultTileLayerAttribution">"© OpenStreetMap Contributors"</string>

    <!-- map activity -->
    <string name="tagPromptTitle">Choose Option</string>
    <!-- list view under map-->
    <string name="tagListViewTitle">Tags</string>

    <!-- tag editing activity -->
    <string name="title_activity_tag_editor">OSM Tag Editor</string>
    <string name="editMessage">Choose Existing OSM Tag to Edit</string>

    <!-- tag creation activity -->
    <string name="title_activity_tag_creator">OSM Tag Creator</string>
    <string name="tagNameHint">Edit Tag Name</string>
    <string name="tagValueHint">Edit Tag Value</string>
    <string name="cancelButtonTitle">Cancel</string>
    <string name="saveButtonTitle">Save</string>

    <string name="title_activity_odkcollect_tag">Tags</string>

    <string name="hello_world">Hello world!</string>
    <string name="odkcollect_tag_instructions">Please fill in values for all of the following OpenStreetMap tags:</string>
    <string name="save_to_odk_collect">Save to ODK Collect</string>
    <string name="title_activity_tag_swipe">Tags</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="odkcollect_fragment_title">Confirm</string>
    <string name="odkcollect_fragment_question">Save tag edits to ODK Collect?</string>
    <string name="standalone_fragment_title">Add or Confirm</string>
    <string name="standalone_fragment_question1">Add tag?</string>
    <string name="standalone_fragment_question2">Save tag edits?</string>

    <string name="downloadOSMMessage">Do you want to download OSM XML data within the bounding box of your map?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="action_controlpanel">Control Panel</string>
    <string name="title_activity_deployments">Deployments</string>
    <string name="title_activity_deployment_details">Deployment Details</string>
    <string name="noname">No Name</string>
    <string name="download_complete">Deployment Complete!</string>
    <string name="download_failed">Download Failed!</string>
    <string name="serverUrl">OpenMapKit Server URL</string>
    <string name="deploymentDownloadCanceled">Deployment download canceled!</string>
    <string name="deploymentDownloadComplete">Deployment download complete!</string>
    <string name="add_node">+  Add %1$s</string>
    <string name="enable_gps">Some features will not work with GPS disabled</string>
    <string name="getting_gps_fix">"Getting a GPS Fix..."</string>
    <string name="waiting_for_accurate_location">Waiting for an accurate GPS location</string>
    <string name="waiting_for_user_location">OpenMapKit is searching for your GPS location</string>
    <string name="need_to_be_close_node">You need to be within %1$s to view details</string>
    <string name="confirm_delete_node">Are you sure you want to delete this %1$s?</string>

    <string name="osm_data_from_odk">OSM Data From ODK</string>
    <string name="odk_query_instructions">Please %1$s the filter to be used for %2$s%3$s</string>
    <string name="filter">Filter</string>
    <string name="action_osmFromODK">OSM Data From ODK</string>
    <string name="downloading_osm_from_odk">Downloading OSM data from the ODK server</string>
    <string name="deleted_node">Deleted %1$s</string>
    <string name="could_not_append_location">Could not append your location. Please re-tag the %1$s</string>
    <string name="could_not_attach_geo_context">Could not attach the tag %1$s</string>
    <string name="copying_odk_media_files">Copying ODK media files</string>
    <string name="files_copying_in_background">Files being copied in the background</string>
    <string name="done_copying_media_files">Done copying media files</string>
    <string name="an_error_occurred_retag">An error occurred. Please re-tag the %1$s</string>
    <string name="title_activity_query">QueryActivity</string>
    <string name="querying_please_wait">Querying OMK, please wait...</string>
    <string name="structure_not_selectable_reason">The structure is not selectable because %1$s has been set to %2$s</string>
    <string name="fill_tag">Make sure you fill this tag before proceeding to the next screen</string>
    <string name="authorization">Authorization</string>
    <string name="password">Password</string>
    <string name="admin_authorization_instructions">Please enter the administrator password to authorize this action.</string>
    <string name="wrong_admin_password_entered">Wrong administrator password entered</string>
    <string name="change_admin_password">Change Admin Password</string>
    <string name="change_admin_password_instructions">Enter the new administrator password below. If you ever forget the new password, you will have to uninstall then reinstall OMK to reset to the default password.</string>
    <string name="new_password">New password</string>
    <string name="retype_password">Retype password</string>
    <string name="change">Change</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="passwords_dont_match">The provided passwords don\'t match</string>
    <string name="indicators">Indicators for %1$s</string>

</resources>
